src/test/ui/span/multiline-span-simple.stderr
error[E0277]: cannot add `()` to `u32`
  --> $DIR/multiline-span-simple.rs:23:18
   |
23 |     foo(1 as u32 + //~ ERROR cannot add `()` to `u32`
   |                  ^ no implementation for `u32 + ()`
   |
   = help: the trait `std::ops::Add<()>` is not implemented for `u32`

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0277"
